third_party/WebKit/WebCore/platform/graphics/skia/PlatformContextSkia.cpp
@@ -47,6 +47,11 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #include <wtf/MathExtras.h>
 
+namespace WebCore 
+{
+extern bool isPathSkiaSafe(const SkMatrix& transform, const SkPath& path);
+}
+
 // State -----------------------------------------------------------------------
 
 // Encapsulates the additional painting state information we store for each
@@ -488,11 +493,13 @@ void PlatformContextSkia::addPath(const SkPath& path)
 
 SkPath PlatformContextSkia::currentPathInLocalCoordinates() const
 {
-    SkPath localPath = m_path;
     const SkMatrix& matrix = m_canvas->getTotalMatrix();
     SkMatrix inverseMatrix;
     if (!matrix.invert(&inverseMatrix))
         return SkPath();
+    if (!WebCore::isPathSkiaSafe(inverseMatrix, m_path))
+        return SkPath();
+    SkPath localPath = m_path;
     localPath.transform(inverseMatrix);
     return localPath;
 }
